app/globals.css
@import 'tailwindcss';

:root {
  --background-neutral-default: hsl(30 48% 96%);
  --background-neutral-strong: hsl(30 16% 80%);
  --background-neutral-subtle: hsl(30 24% 88%);
  --background-neutral-faded: hsl(30 32% 92%);
  --background-neutral-inverse: hsl(30 4% 8%);
  --background-brand-default: hsl(345, 80%, 28%);

  --foreground-neutral-default: hsl(30 2% 4%);
  --foreground-neutral-strong: hsl(30 4% 8%);
  --foreground-neutral-subtle: hsl(30 8% 16%);
  --foreground-neutral-faded: hsl(30 12% 24%);
  --foreground-neutral-inverse: hsl(30 48% 96%);
  --foreground-brand-default: hsl(345, 80%, 28%);

  --border-neutral-default: hsl(30 16% 80%);
  --border-neutral-strong: hsl(30 12% 64%);
  --border-neutral-subtle: hsl(30 24% 88%);
  --border-neutral-faded: hsl(30 32% 92%);
  --border-neutral-inverse: hsl(30 4% 8%);
  --border-brand-default: hsl(345, 80%, 28%);
}

@theme {
  --breakpoint-*: initial;
  --breakpoint-sm: 480px;
  --breakpoint-md: 640px;
  --breakpoint-lg: 960px;
  --breakpoint-xl: 1280px;

  --color-*: initial;
  --color-transparent: transparent;
  --color-background-neutral-default: var(--background-neutral-default);
  --color-background-neutral-strong: var(--background-neutral-strong);
  --color-background-neutral-subtle: var(--background-neutral-subtle);
  --color-background-neutral-faded: var(--background-neutral-faded);
  --color-background-neutral-inverse: var(--background-neutral-inverse);
  --color-background-brand-default: var(--background-brand-default);
  --color-foreground-neutral-default: var(--foreground-neutral-default);
  --color-foreground-neutral-strong: var(--foreground-neutral-strong);
  --color-foreground-neutral-subtle: var(--foreground-neutral-subtle);
  --color-foreground-neutral-faded: var(--foreground-neutral-faded);
  --color-foreground-neutral-inverse: var(--foreground-neutral-inverse);
  --color-foreground-brand-default: var(--foreground-brand-default);
  --color-border-neutral-default: var(--border-neutral-default);
  --color-border-neutral-strong: var(--border-neutral-strong);
  --color-border-neutral-subtle: var(--border-neutral-subtle);
  --color-border-neutral-faded: var(--border-neutral-faded);
  --color-border-neutral-inverse: var(--border-neutral-inverse);
  --color-border-brand-default: var(--border-brand-default);

  --font-*: initial;
  --font-sans: 'Montserrat';
  --font-serif: 'Fraunces';

  --text-*: initial;
  --text-body-small: 12px;
  --text-body-small--line-height: 16px;
  --text-body-medium: 14px;
  --text-body-medium--line-height: 20px;
  --text-body-large: 16px;
  --text-body-large--line-height: 24px;
  --text-title-small: 18px;
  --text-title-small--line-height: 26px;
  --text-title-medium: 20px;
  --text-title-medium--line-height: 28px;
  --text-title-large: 24px;
  --text-title-large--line-height: 32px;
  --text-display-small: 32px;
  --text-display-small--line-height: 40px;
  --text-display-small--letter-spacing: -0.02em;
  --text-display-medium: 48px;
  --text-display-medium--line-height: 56px;
  --text-display-medium--letter-spacing: -0.03em;
  --text-display-large: 64px;
  --text-display-large--line-height: 72px;
  --text-display-large--letter-spacing: -0.04em;
}

